// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`nested pagination > double nested pagination 1`] = `
{
  "user": {
    "id": 1,
    "name": "Alice",
    "posts": {
      "cursor": "[\\"2\\"]",
      "nodes": [
        {
          "author": {
            "name": "Alice",
          },
          "id": 1,
          "section": {
            "name": "News",
            "posts": {
              "cursor": "[\\"4\\"]",
              "nodes": [
                {
                  "author": {
                    "name": "Alice",
                  },
                  "section": {
                    "name": "News",
                  },
                  "text": "Oil price rising.",
                },
                {
                  "author": {
                    "name": "Bob",
                  },
                  "section": {
                    "name": "News",
                  },
                  "text": "Good news from China.",
                },
              ],
            },
          },
          "text": "Oil price rising.",
        },
        {
          "author": {
            "name": "Alice",
          },
          "id": 2,
          "section": {
            "name": "Editorial",
            "posts": {
              "cursor": null,
              "nodes": [
                {
                  "author": {
                    "name": "Alice",
                  },
                  "section": {
                    "name": "Editorial",
                  },
                  "text": "Is communism dead yet?",
                },
              ],
            },
          },
          "text": "Is communism dead yet?",
        },
      ],
    },
  },
}
`;

exports[`nested pagination > nested pagination 1`] = `
{
  "user": {
    "name": "Alice",
    "posts": {
      "cursor": "[\\"2\\"]",
      "nodes": [
        {
          "id": 1,
          "section": {
            "name": "News",
          },
          "text": "Oil price rising.",
        },
        {
          "id": 2,
          "section": {
            "name": "Editorial",
          },
          "text": "Is communism dead yet?",
        },
      ],
    },
  },
}
`;

exports[`nested pagination > triple nested pagination 1`] = `
{
  "user": {
    "name": "Bob",
    "posts": {
      "cursor": "[\\"4\\"]",
      "nodes": [
        {
          "author": {
            "name": "Bob",
            "posts": {
              "nodes": [
                {
                  "author": {
                    "name": "Bob",
                  },
                  "text": "Latest COVID figures.",
                },
                {
                  "author": {
                    "name": "Bob",
                  },
                  "text": "Good news from China.",
                },
              ],
            },
          },
          "text": "Latest COVID figures.",
        },
        {
          "author": {
            "name": "Bob",
            "posts": {
              "nodes": [
                {
                  "author": {
                    "name": "Bob",
                  },
                  "text": "Latest COVID figures.",
                },
                {
                  "author": {
                    "name": "Bob",
                  },
                  "text": "Good news from China.",
                },
              ],
            },
          },
          "text": "Good news from China.",
        },
      ],
    },
  },
}
`;
